[gd_scene load_steps=12 format=2]

[ext_resource path="res://GFX/ui/Phase_Shift_Box.png" type="Texture" id=1]
[ext_resource path="res://GFX/ui/PHASE.png" type="Texture" id=2]
[ext_resource path="res://GFX/ui/Teleport_Box.png" type="Texture" id=3]
[ext_resource path="res://GFX/ui/SPEED.png" type="Texture" id=4]
[ext_resource path="res://GFX/ui/SPIRITUAL_EMPTY.png" type="Texture" id=5]
[ext_resource path="res://GFX/ui/SANITY_FULL.png" type="Texture" id=6]
[ext_resource path="res://GFX/ui/TELEPORT.png" type="Texture" id=7]
[ext_resource path="res://GFX/ui/SANITY_EMPTY.png" type="Texture" id=8]
[ext_resource path="res://GFX/ui/SPIRITUAL_FULL.png" type="Texture" id=9]
[ext_resource path="res://GFX/ui/Speed_Box.png" type="Texture" id=10]
[ext_resource path="res://SCRIPTS/UIManager.gd" type="Script" id=11]

[node name="PlayerUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )

[node name="SanityBar" type="TextureProgress" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 6 )

[node name="SpiritualBar" type="TextureProgress" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -687.0
margin_bottom = 116.0
max_value = 1.0
step = 0.01
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 9 )

[node name="Teleport" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_top = -40.0

[node name="Box" type="TextureRect" parent="Teleport"]
margin_left = 269.0
margin_top = -225.0
margin_right = 880.0
margin_bottom = 387.0
rect_scale = Vector2( 0.38, 0.38 )
texture = ExtResource( 3 )

[node name="Reload" type="TextureRect" parent="Teleport"]
margin_left = 293.0
margin_top = -227.0
margin_right = 470.0
margin_bottom = -50.0
rect_scale = Vector2( 1.05179, 1.08571 )
texture = ExtResource( 7 )

[node name="Speed" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -960.0
margin_right = 960.0

[node name="Reload" type="TextureRect" parent="Speed"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -545.0
margin_top = -236.0
margin_right = -306.0
margin_bottom = 4.0
texture = ExtResource( 4 )

[node name="Box" type="TextureRect" parent="Speed"]
margin_left = 413.0
margin_top = -267.0
margin_right = 1057.0
margin_bottom = 346.0
rect_scale = Vector2( 0.445, 0.445 )
texture = ExtResource( 10 )

[node name="PhaseShift" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -960.0
margin_right = 960.0

[node name="Box" type="TextureRect" parent="PhaseShift"]
margin_left = 837.0
margin_top = -267.0
margin_right = 1458.0
margin_bottom = 345.0
rect_scale = Vector2( 0.415311, 0.415311 )
texture = ExtResource( 1 )

[node name="Reload" type="TextureRect" parent="PhaseShift"]
margin_left = 840.0
margin_top = -257.0
margin_right = 1082.0
margin_bottom = -15.0
rect_scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 2 )
